@startuml White
entity User {
    * id: INT <<PK>>
    --
    * email: VARCHAR
    * name: VARCHAR
    --
    is_artist: BOOLEAN
    birthday: DATE
}

entity Artist {
    * id: INT <<PK>>
    * user_id: INT <<FK |> User>>
    --
    * name: VARCHAR
    * description: TEXT
}

entity Song {
    * id: INT <<PK>>
    --
    album_id: VARCHAR
    * title: VARCHAR
    * duration: INT
    * description: TEXT
    * artist_id: INT <<FK |> Artist>>
}

entity Concert {
    * id: INT <<PK>>
    --
    * location: VARCHAR
    * event_at: DATETIME
    * url: VARCHAR
    longitude: DOUBLE
    latitude: DOUBLE
    * artist_id: INT <<FK |> Artist>>
}

User }o--o{ Artist : Follow
Artist }|--|{ Album : Has Album
Artist }o--o{ Song : Sings the Song
Artist }o--o{ Concert : Perform on Concert
Album ||--|{ Song : Contain Songs
@enduml